Implemented user activation endpoint
